--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,8 +36,16 @@
 	        </div>
 	        <!-- Navbar Right Side -->
 	        <div class="navbar-nav">
-	          <a class="nav-item nav-link" href="#">Login</a>
-	          <a class="nav-item nav-link" href="#">Register</a>
+	        	<!-- Django has 'user' variable which lets us know if user in logged in. -->	
+	        	{% if user.is_authenticated %}	
+		        	<a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+		        	<a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+		        	<a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+	        	{% else %}
+		        	<a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+		         	<a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+	        	{% endif %}
+
 	        </div>
 	      </div>
 	    </div>
@@ -49,7 +57,14 @@
 	<main role="main" class="container">
 	  <div class="row">
 	    <div class="col-md-8">
-	      {% block content %}{% endblock %}
+	    	{% if messages %}
+	    		{% for message in messages %}
+	  				<div class="alert alert-{{ message.tags }}">
+	  					{{ message }}	  					
+	  				</div>
+	  			{% endfor %}  	
+	  		{% endif %}
+	    	{% block content %}{% endblock %}
 	    </div>
 	    <div class="col-md-4">
 	      <div class="content-section">
